added nginx, uwsgi docker

--- a/flask/app/assets/base.css
+++ b/flask/app/assets/base.css
@@ -211,7 +211,7 @@ Taken from https://codepen.io/chriddyp/pen/bWLwgP.css
   }
   /* Links –––––––––––––––––––––––––––––––––––––––––––––––––– */
   a {
-    color: #1EAEDB;
+    color: #119dff;
     text-decoration: underline;
     cursor: pointer;
   }
